{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 127,
  "lineage": "e5ceab24-d675-d11f-48df-0aae9aa1a8e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:983578324320:instance/i-0c0623412fcb62908",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0623412fcb62908",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Admin-cfo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd3bc46f099cbcc0",
            "private_dns": "ip-172-20-10-107.us-east-2.compute.internal",
            "private_ip": "172.20.10.107",
            "public_ip": "3.144.29.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afcfaed3c33a262d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07e395e323c82da78"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0418a4827189541a9",
            "tags": {
              "Name": "Ansible-Instance"
            },
            "tags_all": {
              "Name": "Ansible-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e395e323c82da78"
            ]
          },
          "dependencies": [
            "aws_security_group.myLab-SG",
            "aws_subnet.myLab-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myLab-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:983578324320:internet-gateway/igw-024be60d09a6f5546",
            "id": "igw-024be60d09a6f5546",
            "owner_id": "983578324320",
            "tags": {
              "Name": "myLab-igw"
            },
            "tags_all": {
              "Name": "myLab-igw"
            },
            "vpc_id": "vpc-0699e54fb5eb93553"
          },
          "dependencies": [
            "aws_vpc.myLab-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myLab_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:983578324320:route-table/rtb-087ef653ec782cb46",
            "id": "rtb-087ef653ec782cb46",
            "owner_id": "983578324320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024be60d09a6f5546",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table"
            },
            "tags_all": {
              "Name": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699e54fb5eb93553"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myLab-IGW",
            "aws_vpc.myLab-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myLabRouteTableAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06daf8570048cfe37",
            "route_table_id": "rtb-087ef653ec782cb46",
            "subnet_id": "subnet-0418a4827189541a9"
          },
          "dependencies": [
            "aws_internet_gateway.myLab-IGW",
            "aws_route_table.myLab_routeTable",
            "aws_subnet.myLab-subnet1",
            "aws_vpc.myLab-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myLab-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:983578324320:security-group/sg-07e395e323c82da78",
            "description": "To allow inbound outbound traffic with the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e395e323c82da78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "myLab-security grou",
            "name_prefix": "",
            "owner_id": "983578324320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow"
            },
            "tags_all": {
              "Name": "allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699e54fb5eb93553"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myLab-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myLab-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:983578324320:subnet/subnet-0418a4827189541a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0418a4827189541a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983578324320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0699e54fb5eb93553"
          },
          "dependencies": [
            "aws_vpc.myLab-aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myLab-aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:983578324320:vpc/vpc-0699e54fb5eb93553",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0e57ab671bd3befc8",
            "default_route_table_id": "rtb-05b026f8d9c7148f6",
            "default_security_group_id": "sg-0ebc6de8faff500a7",
            "dhcp_options_id": "dopt-0cced9e2db28acd7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0699e54fb5eb93553",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b026f8d9c7148f6",
            "owner_id": "983578324320",
            "tags": {
              "Name": "myLab-vpc"
            },
            "tags_all": {
              "Name": "myLab-vpc"
            }
          }
        }
      ]
    }
  ]
}